test/interop/C/errorMessage/errorInArgNMismatch.good
errorInArgNMismatch.chpl:3: error: Redefinition of a function with different number of args
