test/interop/C/errorMessage/errorInArgNMismatch.chpl
require "errorInArgNMismatch.h";

export proc foo(x : real) { }

